# chat-application

./: .gitignore  README.md  database.json
client/: package-lock.json  package.json
client-elm/: .gitignore  elm.js  elm.json  index.html  package.json
client-elm/elm-stuff/0.19.1/: Main.elmi  Main.elmo
client-elm/src/: Main.elm  index.css  utils.js
client/public/: index.html
client/src/: App.css  App.js  Chat.js  Components.css  Components.js  LogginForm.js  RegisterForm.js  Send.js  index.css  index.js
rocket-server/: Cargo.toml  Rocket.toml
rocket-server/src/: main.rs
rust-server/: Cargo.toml
rust-server/public/: elm.js  index.css  index.html
rust-server/src/: main.rs
server/: package-lock.json  package.json  server.js
src/: main.rs
