[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["17steen <robinoger1207@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.2"
rand = "0.7.3"
chrono = "0.4.15"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "serve"]

# [dependencies.redis]
# version = "*"